<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/imageView_poem_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner3" />

    <Button
        android:id="@+id/btn1_poem_menu"
        android:layout_width="@dimen/width_of_button_in_poem_menu"
        android:layout_height="@dimen/height_of_button_in_poem_menu"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_button"
        android:text="@string/first_subject"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2_poem_menu"
        app:layout_constraintTop_toBottomOf="@+id/txt_poem_menu" />

    <Button
        android:id="@+id/btn2_poem_menu"
        android:layout_width="@dimen/width_of_button_in_poem_menu"
        android:layout_height="@dimen/height_of_button_in_poem_menu"
        android:background="@drawable/selector_button"
        android:text="@string/second_subject"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintBottom_toBottomOf="@+id/btn1_poem_menu"
        app:layout_constraintEnd_toStartOf="@+id/btn1_poem_menu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn1_poem_menu" />

    <Button
        android:id="@+id/btn3_poem_menu"
        android:layout_width="@dimen/width_of_button_in_poem_menu"
        android:layout_height="@dimen/height_of_button_in_poem_menu"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_button"
        android:text="@string/third_subject"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4_poem_menu"
        app:layout_constraintTop_toBottomOf="@+id/btn1_poem_menu" />

    <Button
        android:id="@+id/btn4_poem_menu"
        android:layout_width="@dimen/width_of_button_in_poem_menu"
        android:layout_height="@dimen/height_of_button_in_poem_menu"
        android:background="@drawable/selector_button"
        android:text="@string/forth_subject"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintBottom_toBottomOf="@+id/btn3_poem_menu"
        app:layout_constraintEnd_toStartOf="@+id/btn3_poem_menu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn3_poem_menu" />

    <Button
        android:id="@+id/btn5_poem_menu"
        android:layout_width="@dimen/width_of_button_in_poem_menu"
        android:layout_height="@dimen/height_of_button_in_poem_menu"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_button"
        android:text="@string/fifth_subject"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6_poem_menu"
        app:layout_constraintTop_toBottomOf="@+id/btn3_poem_menu" />

    <Button
        android:id="@+id/btn6_poem_menu"
        android:layout_width="@dimen/width_of_button_in_poem_menu"
        android:layout_height="@dimen/height_of_button_in_poem_menu"
        android:background="@drawable/selector_button"
        android:text="@string/sixth_subject"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintBottom_toBottomOf="@+id/btn5_poem_menu"
        app:layout_constraintEnd_toStartOf="@+id/btn5_poem_menu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn5_poem_menu" />

    <TextView
        android:id="@+id/txt_poem_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/poem_menu"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poem_menu" />

</android.support.constraint.ConstraintLayout>